cmake_minimum_required(VERSION 3.12)

set(NAME Exp) 
set(PICO_BOARD pico2)
set(PICO_PLATFORM rp2350-arm-s)


include("$ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake")

project(${NAME} C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_CXX_ENABLE_EXCEPTIONS 1)

# Initialize the SDK
pico_sdk_init()


SET(LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/../../lib")


set(LVGL_DIR "${LIB_DIR}/lvgl")
include("lvgl.cmake")


SET(FREERTOS_KERNEL_PATH "${LIB_DIR}/FreeRTOS-Kernel" CACHE STRING "Course Common Lib")
SET(FREERTOS_CONFIG_FILE_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/port/FreeRTOS-Kernel" CACHE STRING "Local Config")
include(${CMAKE_CURRENT_LIST_DIR}/port/FreeRTOS-Kernel/freertos_config.cmake)
include(FreeRTOS_Kernel_import.cmake)

include(${LIB_DIR}/PicoLED/PicoLed.cmake)

add_subdirectory(src)

#Set up files for the release packages
install(CODE "execute_process(COMMAND $ENV{HOME}/bin/picoDeploy.sh ${CMAKE_CURRENT_BINARY_DIR}/src/${NAME}.elf)")

# Set up files for the release packages
install(FILES
    ${CMAKE_CURRENT_BINARY_DIR}/src/${NAME}.uf2
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
)

set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_GENERATOR "ZIP" "TGZ")
include(CPack)
